<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorAccent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:titleTextColor="@color/colorPrimaryDark"/>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <TextView
                    style="@style/ColumnHeaderViewStyle"
                    android:text="@string/name_column_title"
                    android:layout_weight="4" />

                <TextView
                    style="@style/ColumnHeaderViewStyle"
                    android:text="@string/manufacturer_column_title"
                    android:layout_weight="4" />

                <TextView
                    style="@style/ColumnHeaderViewStyle"
                    android:id="@+id/item_quantity"
                    android:text="@string/quantity_column_title"
                    android:layout_weight="5" />

                <TextView
                    style="@style/ColumnHeaderViewStyle"
                    android:id="@+id/item_price"
                    android:text="@string/price_column_title"
                    android:layout_weight="5" />



            </LinearLayout>

            <ListView
                android:id="@+id/list_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>

        </LinearLayout>

    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/navigation_pane_view_inv"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>