<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/border"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            style="@style/ListViewStyle"
            android:id="@+id/item_name"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeMaxTextSize="128sp"
            android:layout_weight="2"/>

        <TextView
            style="@style/ListViewStyle"
            android:id="@+id/item_manufacturer"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="16sp"
            android:layout_weight="4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                style="@style/ListViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_stock"
                android:textSize="16sp"/>
            <TextView
                style="@style/ListViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_quantity"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                style="@style/ListViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="16sp"/>
            <TextView
                style="@style/ListViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_price"
                android:textSize="16sp"/>

        </LinearLayout>


</LinearLayout>

    <Button
        android:id="@+id/unit_sold_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:text="@string/unit_sold"
        android:textSize="12sp"/>

</LinearLayout>